# kiss-mpris-properties

./: .gitignore  CMakeLists.txt  README.md  flake.nix
demo/: CMakeLists.txt  main.c
src/: CMakeLists.txt  kiss-mpris.c  kiss-mpris.h  sdbus.h
